added reader stack

--- a/MasterMind.cabal
+++ b/MasterMind.cabal
@@ -57,6 +57,7 @@ executable MasterMind
     other-modules:    Types
                     , Game
                     , Utils
+                    , Playground
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
